--- a/02-Advanced-CSS-Portfolio/assets/css/style.css
+++ b/02-Advanced-CSS-Portfolio/assets/css/style.css
@@ -124,6 +124,10 @@ nav ul {
     flex: 1 1 40%;
 }
 
+.projectlist div:hover {
+    background-color: lightgray;
+}
+
 .projectlist p {
     padding: 2%;
 }
