Changed HTML architecture, now using three containers, intro, questions and score.  Using display in js to turn on and off

--- a/04-Web-APIs-Code-Quiz/assets/css/style.css
+++ b/04-Web-APIs-Code-Quiz/assets/css/style.css
@@ -34,9 +34,6 @@
   }
 
   main section {
-      border: solid;
-      border-color: #13293d;
-      border-radius: 20px;
       margin:30px;
       padding: 30px;
   }
@@ -48,6 +45,29 @@
 
   #intro {
     display:block;
+    border: solid;
+    border-color: #13293d;
+    border-radius: 20px;
+    margin:30px;
+    padding: 30px;
+  }
+
+  #question-container {
+    display:block;
+    border: solid;
+    border-color: #13293d;
+    border-radius: 20px;
+    margin:30px;
+    padding: 30px;
+  }
+
+  #score-container {
+    display:block;
+    border: solid;
+    border-color: #13293d;
+    border-radius: 20px;
+    margin:30px;
+    padding: 30px;
   }
 
   button {
