wrote function to store and get initials and score from local memory and it actually works

--- a/04-Web-APIs-Code-Quiz/assets/css/style.css
+++ b/04-Web-APIs-Code-Quiz/assets/css/style.css
@@ -60,25 +60,7 @@
     padding: 5px;
   }
 
-  #intro {
-    display:block;
-    border: solid;
-    border-color: #13293d;
-    border-radius: 20px;
-    margin:30px;
-    padding: 30px;
-  }
-
-  #question-container {
-    display:block;
-    border: solid;
-    border-color: #13293d;
-    border-radius: 20px;
-    margin:30px;
-    padding: 30px;
-  }
-
-  #score-container {
+  .card {
     display:block;
     border: solid;
     border-color: #13293d;
