--- a/05-Third-Party-APIs-Work-Day-Scheduler/assets/css/style.css
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/assets/css/style.css
@@ -20,10 +20,6 @@ body {
   border-bottom: 10px solid black;
 }
 
-.description {
-  white-space: pre-wrap;
-}
-
 .time-block {
   text-align: center;
   border-radius: 15px;
@@ -43,17 +39,17 @@ body {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: slategray;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: hsl(120, 60%, 67%);
+  color: black;
 }
 
 .saveBtn {
@@ -64,7 +60,7 @@ body {
   color: white;
 }
 
-.saveBtn i:hover {
+/* .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
-}
+} */
