--- a/05-Third-Party-APIs-Work-Day-Scheduler/assets/css/style.css
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/assets/css/style.css
@@ -60,7 +60,7 @@ body {
   color: white;
 }
 
-/* .saveBtn i:hover {
+.saveBtn i:hover {
   font-size: 20px;
-  transition: all 0.3s ease-in-out;
-} */
+  transition: all 0.2s ease-in-out;
+}
