--- a/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
+++ b/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
@@ -4,7 +4,6 @@
   --tertiary: #788585;
   --light-dark: blue;
   --dark: black;
-  /* --dark: #38302e; */
   --border-radius: 0.3rem;
 }
 
@@ -70,35 +69,8 @@ p {
   box-shadow: 2px 2px var(--dark);
 }
 
-.btn-inline {
-  display: inline;
-}
-
-.btn-back {
-  border-radius: var(--border-radius);
-  color: var(--primary);
-  border: none;
-  outline: none;
-  background-color: var(--light-dark);
-  box-shadow: 3px 3px var(--secondary);
-  transform: translate(-1px, -1px);
-  display: inline-block;
-  width: auto;
-  margin-top: 20px;
-  padding: 15px;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
-
-.btn-back:hover {
-  color: var(--primary);
-  background-color: var(--tertiary);
-  transform: translate(0, 0);
-  box-shadow: 2px 2px var(--dark);
-}
-
 .header {
-  padding: 3% 4%;
+  padding: 3% 3%;
   background-color: var(--dark);
   color: var(--primary);
   text-align: center;
@@ -111,14 +83,11 @@ p {
   padding: 10px;
 }
 
-.app-title {
+.title {
   font-size: 3rem;
-  /* background-color: var(--primary); */
   color: var(--primary);
   padding: 0 10px;
   display: inline-block;
-  /* border-radius: var(--border-radius);
-  box-shadow: 6px 5px var(--light-dark); */
 }
 
 .weatherDay {
@@ -145,21 +114,6 @@ p {
 
 .list-item:hover {
   background-color: var(--dark);
-}
-
-.status-icon {
-  padding: 2px 5px;
-  margin: 0 5px;
-  background-color: rgba(255, 255, 255, 1);
-  /* border-radius: var(--border-radius); */
-}
-
-.icon-danger {
-  color: rgb(255, 70, 70);
-}
-
-.icon-success {
-  color: rgb(29, 153, 255);
 }
 
 /* CARDS */
