--- a/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
+++ b/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
@@ -12,7 +12,12 @@
 }
 
 body {
-  background-color: white;
+  /* this isnt giving me a background */
+  background-image: url("../images/lakeweather.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   margin: 0;
   padding: 0;
   font-family: 'IBM Plex Sans', sans-serif;
@@ -44,6 +49,7 @@ main {
 
 p {
   font-size: 1.2rem;
+  font-weight: bolder;
 }
 
 .btn {
