--- a/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
+++ b/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  /* this isnt giving me a background */
   background-image: url("../images/lakeweather.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -48,8 +47,9 @@ main {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bolder;
+  color: black;
 }
 
 .btn {
@@ -76,7 +76,7 @@ p {
 }
 
 .header {
-  padding: 3% 3%;
+  padding: 1% 2%;
   background-color: var(--dark);
   color: var(--primary);
   text-align: center;
@@ -85,7 +85,7 @@ p {
 .currentCity {
   border-style: solid;
   border-color: black;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px;
 }
 
@@ -96,19 +96,22 @@ p {
   display: inline-block;
 }
 
+/* This background color adds an opacity setting to give my text something to pop against */
 .weatherDay {
-  background-color:blue;
+  background-color: rgba(135, 206, 235, 0.4);
   color: white;
-  margin:1%
-  /* This border radius is cancelling my margin */
-  /* border-radius: 1px; */
+  margin:1%;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
 }
 
 .list-group {
   padding: 2%;
   list-style: none;
   text-align: center;
-}
+  background-color:skyblue;
+  }
 
 .list-group li button{
   margin-bottom: 10px;
@@ -122,6 +125,14 @@ p {
 
 .list-group li button:hover {
   background-color: var(--dark);
+}
+
+.currentCity {
+  background-color:rgba(135, 206, 235, 0.4);
+}
+
+.currentCity h4{
+  margin-bottom: 10px;
 }
 
 /* CARDS */
@@ -140,6 +151,7 @@ p {
 
 .card-body {
   padding: 2.5%;
+  background-color:skyblue;
 }
 
 /* FORM */
