--- a/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
+++ b/06-Server-Side-APIs-Weather-Dashboard/assets/css/style.css
@@ -179,6 +179,39 @@ p {
   color: black;
 }
 
+.uvilow {
+  background-color: green;
+  border-color: green;
+  border-style: solid;
+  border-radius: 3px;
+  max-width: 200px;
+}
+
+.uvimod {
+  background-color: yellow;
+  border-color:yellow;
+  border-style: solid;
+  border-radius: 3px;
+  max-width: 200px;
+}
+
+.uvihigh {
+  background-color:orange;
+  border-color: orange;
+  border-style: solid;
+  border-radius: 3px;
+  max-width: 200px;
+}
+
+.uviveryhigh {
+  background-color:red;
+  border-color:red;
+  border-style: solid;
+  border-radius: 3px;
+  max-width: 200px;
+}
+
+
 /* HEIGHT / WIDTH UTILS */
 .min-100-vh {
   min-height: 100vh;
